add bmp file read and write function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Compression C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Compression main.c image.c)
+add_executable(Compression main.c image.c bmp.c image.h)
